[gd_scene load_steps=6 format=3 uid="uid://pq0qgg6prn54"]

[ext_resource type="PackedScene" uid="uid://djeqawf2gi7cn" path="res://player/player.tscn" id="1_3ffhs"]
[ext_resource type="Script" path="res://level/main_level.gd" id="1_l7qhp"]
[ext_resource type="PackedScene" uid="uid://cy8q1g0kt5xer" path="res://projectiles/box.tscn" id="2_rmbor"]
[ext_resource type="AudioStream" uid="uid://cahqfhw4wpd4k" path="res://sounds/deathkllr.mp3" id="4_ylvvd"]

[sub_resource type="Curve2D" id="Curve2D_1toyg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1206, 700, 0, 0, 0, 0, -87, 696, 0, 0, 0, 0, -90.737, -89.734, 0, 0, 0, 0, 1208.34, -86.9335, 0, 0, 0, 0, 1206, 700)
}
point_count = 5

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_l7qhp")

[node name="Player" parent="." instance=ExtResource("1_3ffhs")]
position = Vector2(325, 113)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-863.754, -366.746)
scale = Vector2(2.14076, 2.14249)
curve = SubResource("Curve2D_1toyg")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(1206, 700)
rotation = -3.1385

[node name="Ground" type="Node" parent="."]
unique_name_in_owner = true

[node name="Box2" parent="Ground" instance=ExtResource("2_rmbor")]
position = Vector2(407, 201)

[node name="Box" parent="Ground" instance=ExtResource("2_rmbor")]
position = Vector2(259, 293)

[node name="Box3" parent="Ground" instance=ExtResource("2_rmbor")]
position = Vector2(656, 170)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1942.0
offset_bottom = 1100.0
color = Color(0.87451, 0.666667, 0.329412, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 43.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 150
text = "Game Over"

[node name="Button" type="Button" parent="GameOver"]
offset_left = 807.0
offset_top = 712.0
offset_right = 1072.0
offset_bottom = 807.0
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="NextLevelTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 60.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ylvvd")
autoplay = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOver/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="NextLevelTimer" to="." method="_on_next_level_timer_timeout"]
